--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ enable_testing()
 add_executable(yolo main.cpp)
 target_include_directories(yolo PRIVATE incbin)
 set(ONNXRUNTIME_ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/onnxruntime-osx-arm64-1.17.3)
+
 target_include_directories(yolo PRIVATE ${ONNXRUNTIME_ROOTDIR}/include)
 target_link_libraries(yolo PRIVATE ${ONNXRUNTIME_ROOTDIR}/lib/libonnxruntime.dylib)
+target_compile_definitions(yolo PRIVATE MODEL_PATH="${CMAKE_CURRENT_SOURCE_DIR}/mlp.onnx")
 # target_link_directories(yolo PRIVATE incbin)
 # set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 # set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
